--- a/css/estilos.css
+++ b/css/estilos.css
@@ -33,7 +33,7 @@ header .contenedor .menu{
     position: relative;
 }
 header .contenedor a img{
-    width: 130%;
+    width: 250px;
     margin-left: 20px;
 }
 .slider-contenedor{
