--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
-{
+*{
     box-sizing: border-box;
-    /* border: 1px solid black; */ 
+    border: 1px solid black;
 }
 body{
     font-size: 20px;
@@ -80,10 +80,32 @@ main .columna-4{
     width: 75%;
     margin-left: -15%;
 }
-/* .infocomercial img{
+.infocomercial img{
     margin: 6px;
     border: 1px solid rgb(231, 231, 231);
-} */
+}
+.informativo{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.informativo div p {
+    float: left;
+    width: 50%;
+    margin-top: 15%;
+    font-size: 40px;
+    margin-left: 100px;
+    color: #295596;
+    font-weight: 900;
+    font-style: oblique;
+}
+.informativo div img{
+    float: right;
+    width: 30%;
+    margin-right: 200px;
+
+}
+
 @media(max-width: 800px){
     *{
         border: none;
@@ -163,9 +185,23 @@ main .columna-4{
         display: flex;
         flex-direction: column;
     }
-    .infocomercial img{
-        width: 100%;
+    .informativo{
+        position: relative;
     }
+    .informativo div p {
+        width: 90%;
+        margin-top: 15%;
+        font-size: 15px;
+        margin-left: 20px;
+        color: #295596;
+        font-weight: 900;
+        font-style: oblique;
+        text-align: center;
+    }
+    .informativo div img{
+        width: 30%;
+        margin-right: 35%;
+    
 }
 @media(max-width:280px){
     
@@ -197,6 +233,6 @@ main .columna-4{
         width: 100%;
     }
     .infocomercial img{
-        width: 100%;
+        margin-left: 40%;
     }
 }
