--- a/css/estilos.css
+++ b/css/estilos.css
@@ -379,7 +379,6 @@ section .tabla-precios .mes ul li{
     background-color: rgba(252, 200, 12, 0.774);
     padding: 10px 0;
     list-style: none;
-    
 }
 section .tabla-precios .mes ul li .nota{
     font-size: 10px;
@@ -529,7 +528,6 @@ section .tabla-precios .mes .btn{
         color: #295596;
         text-shadow: 1px 3px 0 #969696, 1px 13px 5px #aba8a8, -12px 9px 6px rgba(0,0,0,0.2);
     }
-
     section div.proteccion{
         margin-top: 55%;
         text-align: center;
@@ -550,6 +548,10 @@ section .tabla-precios .mes .btn{
         list-style: none;
         margin-left: auto;
         margin-right: auto;
+    }
+    main section .divicion{
+        margin-top: 50%;
+        margin-bottom: 0;
     }
     section div.canales h4{
         color: #295596;
@@ -572,6 +574,16 @@ section .tabla-precios .mes .btn{
     }
     section div.programacion iframe{
         width: 350px;
+    }
+    section div.banner-titulo{
+        margin-top: 50%;
+    }
+    section div.banner-titulo img{
+        
+        width: 100%;
+    }
+    section .tabla-precios .mes{
+        width: 100%;
     }
 }
 @media(max-width:280px){
