--- a/css/jquery.bxslider.css
+++ b/css/jquery.bxslider.css
@@ -43,7 +43,7 @@ ul.bxslider {
 /* LOADER */
 .bx-wrapper .bx-loading {
   min-height: 50px;
-  background: url('images/bx_loader.gif') center center no-repeat #ffffff;
+  /*background: url('images/bx_loader.gif') center center no-repeat #ffffff;*/
   height: 100%;
   width: 100%;
   position: absolute;
@@ -91,7 +91,7 @@ ul.bxslider {
 /* DIRECTION CONTROLS (NEXT / PREV) */
 .bx-wrapper .bx-prev {
   left: 10px;
-  background: url('images/controls.png') no-repeat 0 -32px;
+  /*background: url('images/controls.png') no-repeat 0 -32px;*/
 }
 .bx-wrapper .bx-prev:hover,
 .bx-wrapper .bx-prev:focus {
